--- a/DevOps/docker-compose.yml
+++ b/DevOps/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: cf1014fmm
+      MYSQL_ROOT_PASSWORD: 123456
     restart: always
     networks:
       - bridge
